[package]
name = "clgl"
version = "0.2.2"
authors = ["Melker Widén"]
edition = "2021"
description = "clgl is a small and lightweight command-line graphics library."
readme = "./README.md"
repository = "https://github.com/memagu/clgl/"
license = "MIT"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]